--- a/index.html
+++ b/index.html
@@ -4,9 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 architects</title>
-    <link rel="stylesheet" hrf="styles/architect.css"> 
+    <link rel="stylesheet" href="styles/architect.css"> 
 </head>
 <body>
-    
+    <header>
+<nav>
+    <h3 class="web-site-title">G3 architects</h3>
+    <ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Contact</a></li>
+    <li><a href="">Login</a></li>
+    </ul>
+</nav>
+<div class="banner">
+    <div class="main-banner-title">
+    <h1 class="banner-title">Brand New <br>Group Of Architects</h1>
+<p class="banner-description">There are many variations of passages
+     of Lorem Ipsum available,but the majority have suffered alteration
+      in some form, by injected humour, or randomised words which don't look even</p>
+<button class="btn-primary">Explore more</button>
+</div>
+
+    <div class="banner-img">
+        <img src="images/banner.png" alt="">
+    </div>
+
+    </header>
+    <main>
+<div class="main-body">
+    <div class="main-body-left">
+        <img src="images/team1.png" alt="" class="">
+        <img src="images/team2.png" alt="" class="">
+        <img src="images/team3.png" alt="" class="">
+        <img src="images/team4.png" alt="" class="">
+    </div>
+    <div class="main-body-right">
+        <h2><span class="light-text"> Quick list </span> <span class="dark-text"> of Our </span> <span class="orange-tex"> Features </span></h2>
+        <p>There are many variations of passages of Lorem Ipsum available, 
+            but the majority have suffered alteration in some form, 
+            by injected humour, or randomised words which don't look even</p>
+        <button class="btn-primary">Explore more</button>
+    </div>
+</div>
+<div class="main-body">
+    <div class="main-body-left">
+        <h2>Features you will love & enjoy</h2>
+        <p>There are many variations of passages of Lorem
+             Ipsum available, but the majority have suffered alteration
+              in some form, by injected humour, or randomised</p>
+        <div class="main-body-text">
+            <h4>Dexktop & Mobile Version</h4>
+            <p>There are many variations of passages of Lorem Ipsum available,
+                 but the majority have suffered alteration
+                 in some form, by injected humour, or randomised</p>
+        </div>
+        <div class="main-body-text">
+            <h4>Drag & Drop Builder</h4>
+            <p>There are many variations of passages of Lorem Ipsum available,
+                <br> but the majority have suffered alteration in some form,
+                <br> by injected humour, or randomised words which don't look even</p>
+        </div>
+        
+        <div class="main-body-text">
+            <h4>Awesome Modern Design</h4>
+            <p>There are many variations of passages of Lorem Ipsum available,
+                <br> but the majority have suffered alteration in some form,<br>
+                 by injected humour, or randomised words which don't look even</p>
+        </div>
+        <div class="main-body-text">
+            <h4>Super Easy to Edit</h4>
+            <p>There are many variations of passages of Lorem Ipsum available,
+                <br> but the majority have suffered alteration in some form,
+                <br> by injected humour, or randomised words which don't look even</p>
+        </div>
+    </div>
+    <div class="main-body-right">
+        <div class="emg-continar">
+           <div class="year-con"><span class="year-text">10+Year Experience</span></div>
+        </div>
+    </div>
+</div>
+
+<div class="margin-div">
+   <h1>Some Facts</h1>
+   <p>There are many variations of passages of Lorem Ipsum available,
+     but the majority have suffered alteration.</p> 
+</div>
+
+<div class="succss-con">
+    <div class="succss">
+        <img src="images/icons/ribon.png" alt="">
+        <h3>54</h3>
+        <p>Awards Winnings</p>
+    </div>
+    <div class="succss">
+        <img src="images/icons/customers.png" alt="">
+        <h3>590</h3>
+        <p>Clients Worked</p>
+    </div>
+    <div class="succss">
+        <img src="images/icons/projects.png" alt="">
+        <h3>1458</h3>
+        <p>Project Finished</p>
+    </div>
+    <div class="succss">
+        <img src="images/icons/email.png" alt="">
+        <h3>22578</h3>
+        <p>email send</p>
+    </div>
+</div>
+<div class="Sponspors-con">
+    <h1>Our Sponspors</h1>
+    <p>There are many variations of passages of Lorem Ipsum available,
+      but the majority have suffered alteration.</p> 
+ </div>
+
+
+ <div class="succss-con">
+    <div class="sponspors-img-con">
+        <img src="images/sponsors/amazon.png" alt="">
+    </div>
+
+    <div class="sponspors-img-con">
+        <img src="images/sponsors/figma.png" alt="">
+    </div>
+
+    <div class="sponspors-img-con">
+        <img src="images/sponsors/google.png" alt="">
+    </div>
+
+    <div class="sponspors-img-con">
+        <img src="images/sponsors/telerama.png" alt="">
+    </div>
+
+</div>
+    </main>
+    <footer>
+All rights reserved copyright@2023 startup landing page design
+
+    </footer>
+    <p class="cradet-by">Dolly Khan</p>
 </body>
 </html>
